<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="205dp"
    android:background="@null">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullscreen_content"
        android:background="@drawable/dark_wall"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/a"
        android:src="@drawable/gradient"
        android:layout_marginTop="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="22sp"
        android:text="@string/rate_app"
        android:layout_below="@id/a"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/text"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/text"
        android:layout_marginTop="15dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:id="@+id/button_no"
            android:textSize="20sp"
            android:background="@color/cyan"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:id="@+id/button_later"
            android:textSize="20sp"
            android:background="@color/yellow"
            android:layout_weight="1"
            android:text="@string/later"
            android:textColor="@color/black" />
        <Button
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:textSize="20sp"
            android:id="@+id/button_yes"
            android:background="@color/pink"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>