<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_wall"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:id="@+id/text_greeting"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:visibility="invisible"
        android:textColor="@color/pink"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/text_1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_below="@id/text_greeting"
        android:textSize="25sp"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/pochti_white"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/orange"
        android:src="@drawable/orange"
        android:layout_below="@id/text_1"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mix_purple"
        android:id="@+id/text_2"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:layout_below="@id/orange"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/pochti_white"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/purple"
        android:src="@drawable/purple"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        android:layout_marginTop="15dp"
        android:layout_below="@id/text_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mix_green"
        android:id="@+id/text_3"
        android:visibility="invisible"
        android:layout_below="@id/purple"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/pochti_white"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/green"
        android:src="@drawable/green"
        android:visibility="invisible"
        android:layout_below="@id/text_3"
        android:adjustViewBounds="true"
        android:layout_marginTop="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/pochti_white"
        android:id="@+id/text_4"
        android:text="@string/swipe_to_cont"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>
