<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_wall"
    tools:context="vlimv.colorquad.Credits">
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/button_back"
        android:src="@drawable/home"
        android:adjustViewBounds="true"
        android:background="@color/yellow"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="3dp"
        android:padding="5dp"
        android:scaleType="fitCenter"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/l_layout"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/cyan"
            android:text="COLOR"
            android:id="@+id/title_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/pink"
            android:text="QUAD"
            android:id="@+id/title_quad" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="85dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_purple"
                android:layout_centerHorizontal="true"
                android:text="@string/background"
                android:id="@+id/text_bg"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_bg"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_purple"
                android:layout_centerHorizontal="true"
                android:text="Subtle Patterns"
                android:id="@+id/subtle_patterns"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtle_patterns"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/music"
                android:textColor="@color/purple"
                android:id="@+id/text_music"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_music"
                android:layout_marginTop="5dp"
                android:textColor="@color/purple"
                android:layout_centerHorizontal="true"
                android:text="frankum"
                android:id="@+id/text_frankum"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_frankum"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/icons"
                android:textColor="@color/green"
                android:id="@+id/text_icons"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_icons"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:layout_centerHorizontal="true"
                android:text="Yesset Zhussupov"
                android:id="@+id/text_yesset"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_yesset"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/font"
                android:textColor="@color/yellow"
                android:id="@+id/text_font"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_font"
                android:layout_marginTop="5dp"
                android:textColor="@color/yellow"
                android:layout_centerHorizontal="true"
                android:text="Kash Singh"
                android:id="@+id/tex_font_author_1"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tex_font_author_1"
                android:layout_marginTop="5dp"
                android:textColor="@color/yellow"
                android:layout_centerHorizontal="true"
                android:text="Sergiy Tkachenko"
                android:id="@+id/tex_font_author_2"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tex_font_author_2"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/coding"
                android:textColor="@color/orange"
                android:id="@+id/text_coding"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_coding"
                android:layout_marginTop="5dp"
                android:textColor="@color/orange"
                android:layout_centerHorizontal="true"
                android:text="Alima Medukhanova"
                android:id="@+id/text_alima"
                android:textSize="20sp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
